# docs/static/sonr.swagger.yaml
@@ -849,11 +849,8 @@ definitions:
         type: string
       didDocument:
         $ref: '#/definitions/identityDidDocument'
-      accounts:
-        type: array
-        items:
-          type: object
-          $ref: '#/definitions/v1Account'
+      newAccount:
+        $ref: '#/definitions/v1Account'
     description: CreateAccountResponse is the response to a CreateAccount request.
   v1DeleteAccountResponse:
     type: object
