# types/highway/v1/mpc.pb.go
@@ -195,7 +195,7 @@ type CreateAccountResponse struct {
 	Success     bool               `protobuf:"varint,1,opt,name=success,proto3" json:"success,omitempty"`
 	CoinType    string             `protobuf:"bytes,2,opt,name=coin_type,json=coinType,proto3" json:"coin_type,omitempty"`
 	DidDocument *types.DidDocument `protobuf:"bytes,3,opt,name=did_document,json=didDocument,proto3" json:"did_document,omitempty"`
-	Accounts    []*Account         `protobuf:"bytes,4,rep,name=accounts,proto3" json:"accounts,omitempty"`
+	NewAccount  *Account           `protobuf:"bytes,4,opt,name=new_account,json=newAccount,proto3" json:"new_account,omitempty"`
 }
 
 func (m *CreateAccountResponse) Reset()         { *m = CreateAccountResponse{} }
@@ -252,9 +252,9 @@ func (m *CreateAccountResponse) GetDidDocument() *types.DidDocument {
 	return nil
 }
 
-func (m *CreateAccountResponse) GetAccounts() []*Account {
+func (m *CreateAccountResponse) GetNewAccount() *Account {
 	if m != nil {
-		return m.Accounts
+		return m.NewAccount
 	}
 	return nil
 }
@@ -848,51 +848,52 @@ func init() {
 func init() { proto.RegisterFile("highway/v1/mpc.proto", fileDescriptor_166b7add3c7bdf3f) }
 
 var fileDescriptor_166b7add3c7bdf3f = []byte{
-	// 695 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x56, 0xcd, 0x6e, 0xd3, 0x4c,
-	0x14, 0x8d, 0x93, 0x7c, 0x4d, 0x72, 0xd3, 0x4a, 0x5f, 0xa7, 0xa9, 0x30, 0x86, 0x46, 0xc5, 0x82,
-	0xb6, 0x2b, 0x5b, 0x29, 0x12, 0x1b, 0x36, 0x40, 0x23, 0x21, 0x68, 0x2b, 0xa4, 0x80, 0x58, 0x80,
-	0x44, 0x70, 0x3c, 0x83, 0x33, 0xa2, 0xb1, 0x5d, 0xcf, 0xb8, 0xc8, 0x6b, 0x5e, 0x80, 0x37, 0x61,
-	0xc3, 0x43, 0xb0, 0x60, 0xd1, 0x1d, 0x2c, 0x51, 0xfb, 0x22, 0xc8, 0x7f, 0xb1, 0x9d, 0x4c, 0x63,
-	0xb5, 0xd9, 0xcd, 0xdc, 0xb9, 0xbe, 0xe7, 0x9c, 0xfb, 0x27, 0x43, 0x67, 0x4c, 0xad, 0xf1, 0x17,
-	0x23, 0xd0, 0xcf, 0x7a, 0xfa, 0xc4, 0x35, 0x35, 0xd7, 0x73, 0xb8, 0x83, 0xd6, 0x99, 0x63, 0x7b,
-	0xe3, 0x53, 0x2d, 0x79, 0xd4, 0xce, 0x7a, 0x4a, 0xc7, 0x72, 0x2c, 0x27, 0x7a, 0xd5, 0xc3, 0x53,
-	0xec, 0xa8, 0xdc, 0x32, 0x1d, 0x8f, 0xe8, 0x14, 0x13, 0x9b, 0x53, 0x1e, 0xe8, 0x98, 0xe2, 0xf8,
-	0x41, 0xfd, 0x21, 0x41, 0xe3, 0xa9, 0x69, 0x3a, 0xbe, 0xcd, 0x91, 0x0c, 0x0d, 0x03, 0x63, 0x8f,
-	0x30, 0x26, 0x4b, 0xdb, 0xd2, 0x5e, 0x6b, 0x90, 0x5e, 0x11, 0x82, 0xba, 0x6d, 0x4c, 0x88, 0x5c,
-	0x8d, 0xcc, 0xd1, 0x19, 0xfd, 0x0f, 0x35, 0x4c, 0xb1, 0x5c, 0x8b, 0x4c, 0xe1, 0x11, 0xdd, 0x81,
-	0x96, 0xe9, 0x50, 0x7b, 0xc8, 0x03, 0x97, 0xc8, 0xf5, 0xc8, 0xde, 0x0c, 0x0d, 0x6f, 0x02, 0x97,
-	0xa0, 0xdb, 0xd0, 0x34, 0xc7, 0x06, 0xb5, 0x87, 0x14, 0xcb, 0xff, 0xc5, 0xd1, 0xa3, 0xfb, 0x0b,
-	0x8c, 0xb6, 0x00, 0x5c, 0x7f, 0x74, 0x42, 0xcd, 0xe1, 0x67, 0x12, 0xc8, 0x2b, 0xd1, 0x63, 0x2b,
-	0xb6, 0x1c, 0x92, 0x20, 0x04, 0x8f, 0x22, 0x36, 0x62, 0xf0, 0xf0, 0xac, 0x8e, 0xa0, 0x73, 0xe0,
-	0x11, 0x83, 0x93, 0x84, 0xfb, 0x80, 0x9c, 0xfa, 0x84, 0xf1, 0x29, 0x51, 0x29, 0x47, 0xb4, 0x40,
-	0xab, 0xba, 0x80, 0x56, 0xad, 0x40, 0x4b, 0xfd, 0x25, 0xc1, 0xe6, 0x0c, 0x08, 0x73, 0x1d, 0x9b,
-	0x91, 0x30, 0x51, 0xcc, 0x37, 0xcd, 0x34, 0x51, 0xcd, 0x41, 0x7a, 0x5d, 0x8c, 0xd5, 0x87, 0x55,
-	0x4c, 0xf1, 0x10, 0x3b, 0xa6, 0x3f, 0x21, 0x36, 0x8f, 0xf0, 0xda, 0xfb, 0xf7, 0xb4, 0xa4, 0x88,
-	0x61, 0x89, 0xb4, 0xb4, 0x44, 0x5a, 0x9f, 0xe2, 0x7e, 0xe2, 0x38, 0x68, 0xe3, 0xec, 0x82, 0x1e,
-	0x41, 0xd3, 0x88, 0xf9, 0x30, 0xb9, 0xbe, 0x5d, 0xdb, 0x6b, 0xef, 0x2b, 0xda, 0x5c, 0x1b, 0x68,
-	0x29, 0xe5, 0xa9, 0xaf, 0xfa, 0x12, 0xd6, 0x9f, 0x13, 0x3e, 0x93, 0xaf, 0xab, 0x4b, 0xbe, 0x48,
-	0x89, 0xfa, 0x55, 0x02, 0x94, 0x0f, 0xb6, 0x5c, 0x5e, 0x6e, 0xaa, 0xe8, 0x08, 0x36, 0x8e, 0x28,
-	0x4b, 0x59, 0xb0, 0x25, 0x35, 0x8d, 0xa1, 0x53, 0x8c, 0x56, 0x2a, 0x2a, 0xcf, 0xbb, 0x76, 0x0d,
-	0xde, 0xaf, 0xa0, 0xd3, 0x27, 0x27, 0x64, 0xae, 0x79, 0xaf, 0x26, 0xbe, 0x05, 0xc0, 0x0d, 0xcf,
-	0x22, 0x7c, 0x18, 0x8e, 0x5c, 0xcc, 0xbc, 0x15, 0x5b, 0xfa, 0x14, 0xab, 0xdf, 0x25, 0xd8, 0x9c,
-	0x89, 0x58, 0x4a, 0x7e, 0xb6, 0x19, 0xab, 0x4b, 0x37, 0xe3, 0x75, 0x52, 0xf0, 0x04, 0xd0, 0x6b,
-	0x6a, 0xd9, 0xc7, 0x84, 0x31, 0xc3, 0x22, 0x69, 0x02, 0x92, 0x95, 0x22, 0x65, 0x2b, 0x45, 0x86,
-	0xc6, 0x24, 0xf6, 0x49, 0x54, 0xa7, 0x57, 0x35, 0x80, 0x8d, 0x42, 0x84, 0x52, 0xc1, 0x49, 0xf0,
-	0x6a, 0x16, 0xfc, 0x2e, 0xb4, 0x18, 0xb5, 0x6c, 0x83, 0xfb, 0x1e, 0x49, 0x86, 0x3f, 0x33, 0xe4,
-	0xa1, 0xeb, 0x45, 0xe8, 0x8f, 0xd0, 0x79, 0x4b, 0x3c, 0xfa, 0x29, 0xb8, 0x39, 0xfd, 0xc5, 0xd8,
-	0xea, 0x01, 0x6c, 0xce, 0x20, 0x5c, 0x5f, 0xde, 0xfe, 0xef, 0x3a, 0xd4, 0x8e, 0x5d, 0x13, 0x61,
-	0x58, 0x2b, 0xac, 0x31, 0xb4, 0x2b, 0x28, 0x91, 0x68, 0x9b, 0x2a, 0x7b, 0xe5, 0x8e, 0x31, 0x2f,
-	0xb5, 0x82, 0x0c, 0x58, 0xcd, 0x8f, 0x0f, 0xda, 0x11, 0x7c, 0x2b, 0x98, 0x56, 0x65, 0xb7, 0xd4,
-	0x6f, 0x0a, 0xf1, 0x1e, 0x20, 0x5b, 0x3a, 0xe8, 0xbe, 0xe0, 0xc3, 0xb9, 0x05, 0xa7, 0x3c, 0x28,
-	0xf1, 0x9a, 0x06, 0xc7, 0xb0, 0x56, 0x18, 0x21, 0x61, 0x96, 0x44, 0x63, 0x2b, 0xcc, 0x92, 0x70,
-	0x1a, 0xd5, 0x0a, 0xfa, 0x00, 0xed, 0x5c, 0xd7, 0x22, 0x11, 0xbb, 0xf9, 0xb9, 0x50, 0x76, 0xca,
-	0xdc, 0xf2, 0x2a, 0x0a, 0x8d, 0x23, 0x54, 0x21, 0x6a, 0x5e, 0xa1, 0x0a, 0x61, 0x0f, 0xaa, 0x95,
-	0x67, 0x87, 0x3f, 0x2f, 0xba, 0xd2, 0xf9, 0x45, 0x57, 0xfa, 0x7b, 0xd1, 0x95, 0xbe, 0x5d, 0x76,
-	0x2b, 0xe7, 0x97, 0xdd, 0xca, 0x9f, 0xcb, 0x6e, 0xe5, 0x5d, 0xcf, 0xa2, 0x7c, 0xec, 0x8f, 0x34,
-	0xd3, 0x99, 0xe8, 0x71, 0x3c, 0x3d, 0xfa, 0xf3, 0x08, 0x37, 0x2e, 0xd3, 0xb3, 0x7f, 0x98, 0xc7,
-	0xc9, 0xf1, 0xac, 0x37, 0x5a, 0x89, 0x7e, 0x44, 0x1e, 0xfe, 0x0b, 0x00, 0x00, 0xff, 0xff, 0x16,
-	0x07, 0xd9, 0x26, 0xe2, 0x08, 0x00, 0x00,
+	// 709 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x56, 0xcf, 0x6e, 0xd3, 0x4e,
+	0x10, 0x8e, 0x93, 0xfc, 0x9a, 0x64, 0xd2, 0x4a, 0xbf, 0x6e, 0x53, 0x61, 0x0c, 0x8d, 0x8a, 0x05,
+	0x6d, 0x4f, 0xb6, 0x52, 0x24, 0x2e, 0xbd, 0x00, 0x8d, 0x84, 0xa0, 0xad, 0x90, 0x02, 0xe2, 0x00,
+	0x12, 0xc1, 0xf1, 0x2e, 0xce, 0x8a, 0xc6, 0x76, 0xbd, 0xeb, 0x56, 0x3e, 0xf3, 0x02, 0xbc, 0x09,
+	0x17, 0x1e, 0x82, 0x63, 0x39, 0xc1, 0x11, 0xb5, 0x2f, 0x82, 0xfc, 0x2f, 0xb6, 0x93, 0x6d, 0xac,
+	0xb6, 0xb7, 0xd9, 0xd9, 0xf1, 0x7c, 0xdf, 0x37, 0x3b, 0x33, 0x32, 0x74, 0xc6, 0xd4, 0x1a, 0x9f,
+	0x19, 0x81, 0x7e, 0xda, 0xd3, 0x27, 0xae, 0xa9, 0xb9, 0x9e, 0xc3, 0x1d, 0xb4, 0xca, 0x1c, 0xdb,
+	0x1b, 0x9f, 0x68, 0xc9, 0xa5, 0x76, 0xda, 0x53, 0x3a, 0x96, 0x63, 0x39, 0xd1, 0xad, 0x1e, 0x5a,
+	0x71, 0xa0, 0x72, 0xc7, 0x74, 0x3c, 0xa2, 0x53, 0x4c, 0x6c, 0x4e, 0x79, 0xa0, 0x63, 0x8a, 0xe3,
+	0x0b, 0xf5, 0x87, 0x04, 0x8d, 0x67, 0xa6, 0xe9, 0xf8, 0x36, 0x47, 0x32, 0x34, 0x0c, 0x8c, 0x3d,
+	0xc2, 0x98, 0x2c, 0x6d, 0x4a, 0x3b, 0xad, 0x41, 0x7a, 0x44, 0x08, 0xea, 0xb6, 0x31, 0x21, 0x72,
+	0x35, 0x72, 0x47, 0x36, 0xfa, 0x1f, 0x6a, 0x98, 0x62, 0xb9, 0x16, 0xb9, 0x42, 0x13, 0xdd, 0x83,
+	0x96, 0xe9, 0x50, 0x7b, 0xc8, 0x03, 0x97, 0xc8, 0xf5, 0xc8, 0xdf, 0x0c, 0x1d, 0x6f, 0x03, 0x97,
+	0xa0, 0xbb, 0xd0, 0x34, 0xc7, 0x06, 0xb5, 0x87, 0x14, 0xcb, 0xff, 0xc5, 0xd9, 0xa3, 0xf3, 0x4b,
+	0x8c, 0x36, 0x00, 0x5c, 0x7f, 0x74, 0x4c, 0xcd, 0xe1, 0x17, 0x12, 0xc8, 0x4b, 0xd1, 0x65, 0x2b,
+	0xf6, 0x1c, 0x90, 0x20, 0x04, 0x8f, 0x32, 0x36, 0x62, 0xf0, 0xd0, 0x56, 0x47, 0xd0, 0xd9, 0xf7,
+	0x88, 0xc1, 0x49, 0xc2, 0x7d, 0x40, 0x4e, 0x7c, 0xc2, 0xf8, 0x94, 0xa8, 0x94, 0x23, 0x5a, 0xa0,
+	0x55, 0x5d, 0x40, 0xab, 0x56, 0xa0, 0xa5, 0xfe, 0x92, 0x60, 0x7d, 0x06, 0x84, 0xb9, 0x8e, 0xcd,
+	0x48, 0x58, 0x28, 0xe6, 0x9b, 0x66, 0x5a, 0xa8, 0xe6, 0x20, 0x3d, 0x2e, 0xc6, 0xea, 0xc3, 0x32,
+	0xa6, 0x78, 0x88, 0x1d, 0xd3, 0x9f, 0x10, 0x9b, 0x47, 0x78, 0xed, 0xdd, 0x07, 0x5a, 0xf2, 0x88,
+	0xe1, 0x13, 0x69, 0xe9, 0x13, 0x69, 0x7d, 0x8a, 0xfb, 0x49, 0xe0, 0xa0, 0x8d, 0xb3, 0x03, 0xda,
+	0x83, 0xb6, 0x4d, 0xce, 0x86, 0x46, 0xcc, 0x29, 0xaa, 0x73, 0x7b, 0x57, 0xd1, 0xe6, 0x3a, 0x41,
+	0x4b, 0x59, 0x83, 0x4d, 0xce, 0x12, 0x5b, 0x7d, 0x05, 0xab, 0x2f, 0x08, 0x9f, 0x29, 0xda, 0xd5,
+	0xef, 0xbe, 0x48, 0x8e, 0xfa, 0x55, 0x02, 0x94, 0x4f, 0x76, 0xbb, 0xe2, 0x3c, 0x81, 0x66, 0x22,
+	0x89, 0xc9, 0xf5, 0xcd, 0x5a, 0x89, 0xa6, 0x69, 0xac, 0x7a, 0x08, 0x6b, 0x87, 0x94, 0xa5, 0x2c,
+	0xd8, 0x2d, 0x35, 0x8d, 0xa1, 0x53, 0xcc, 0x56, 0x2a, 0x2a, 0xcf, 0xbb, 0x76, 0x0d, 0xde, 0xaf,
+	0xa1, 0xd3, 0x27, 0xc7, 0x64, 0xae, 0x83, 0xaf, 0x26, 0xbe, 0x01, 0xc0, 0x0d, 0xcf, 0x22, 0x7c,
+	0x18, 0xce, 0x5d, 0xcc, 0xbc, 0x15, 0x7b, 0xfa, 0x14, 0xab, 0xdf, 0x25, 0x58, 0x9f, 0xc9, 0x58,
+	0x4a, 0x7e, 0xb6, 0x23, 0xab, 0x37, 0xea, 0xc8, 0x9b, 0x96, 0xe0, 0x29, 0xa0, 0x37, 0xd4, 0xb2,
+	0x8f, 0x08, 0x63, 0x86, 0x45, 0xd2, 0x02, 0x24, 0x7b, 0x45, 0xca, 0xf6, 0x8a, 0x0c, 0x8d, 0x49,
+	0x1c, 0x93, 0xa8, 0x4e, 0x8f, 0x6a, 0x00, 0x6b, 0x85, 0x0c, 0xa5, 0x82, 0x93, 0xe4, 0xd5, 0x2c,
+	0xf9, 0x7d, 0x68, 0x31, 0x6a, 0xd9, 0x06, 0xf7, 0x3d, 0x92, 0x6c, 0x80, 0xcc, 0x91, 0x87, 0xae,
+	0x17, 0xa1, 0x3f, 0x41, 0xe7, 0x1d, 0xf1, 0xe8, 0xe7, 0xe0, 0xe6, 0xf4, 0x17, 0x63, 0xab, 0xfb,
+	0xb0, 0x3e, 0x83, 0x70, 0x7d, 0x79, 0xbb, 0xbf, 0xeb, 0x50, 0x3b, 0x72, 0x4d, 0x84, 0x61, 0xa5,
+	0xb0, 0xcb, 0xd0, 0xb6, 0xe0, 0x89, 0x44, 0x2b, 0x55, 0xd9, 0x29, 0x0f, 0x8c, 0x79, 0xa9, 0x15,
+	0x64, 0xc0, 0x72, 0x7e, 0x7c, 0xd0, 0x96, 0xe0, 0x5b, 0xc1, 0xb4, 0x2a, 0xdb, 0xa5, 0x71, 0x53,
+	0x88, 0x0f, 0x00, 0xd9, 0xd2, 0x41, 0x0f, 0x05, 0x1f, 0xce, 0x2d, 0x38, 0xe5, 0x51, 0x49, 0xd4,
+	0x34, 0x39, 0x86, 0x95, 0xc2, 0x08, 0x09, 0xab, 0x24, 0x1a, 0x5b, 0x61, 0x95, 0x84, 0xd3, 0xa8,
+	0x56, 0xd0, 0x47, 0x68, 0xe7, 0xba, 0x16, 0x89, 0xd8, 0xcd, 0xcf, 0x85, 0xb2, 0x55, 0x16, 0x96,
+	0x57, 0x51, 0x68, 0x1c, 0xa1, 0x0a, 0x51, 0xf3, 0x0a, 0x55, 0x08, 0x7b, 0x50, 0xad, 0x3c, 0x3f,
+	0xf8, 0x79, 0xd1, 0x95, 0xce, 0x2f, 0xba, 0xd2, 0xdf, 0x8b, 0xae, 0xf4, 0xed, 0xb2, 0x5b, 0x39,
+	0xbf, 0xec, 0x56, 0xfe, 0x5c, 0x76, 0x2b, 0xef, 0x7b, 0x16, 0xe5, 0x63, 0x7f, 0xa4, 0x99, 0xce,
+	0x44, 0x8f, 0xf3, 0xe9, 0xd1, 0xef, 0x47, 0xb8, 0x71, 0x99, 0x9e, 0xfd, 0xc8, 0xec, 0x25, 0xe6,
+	0x69, 0x6f, 0xb4, 0x14, 0xfd, 0x8d, 0x3c, 0xfe, 0x17, 0x00, 0x00, 0xff, 0xff, 0xdd, 0x0d, 0xfb,
+	0xa8, 0xe7, 0x08, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -1291,19 +1292,17 @@ func (m *CreateAccountResponse) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
-	if len(m.Accounts) > 0 {
-		for iNdEx := len(m.Accounts) - 1; iNdEx >= 0; iNdEx-- {
-			{
-				size, err := m.Accounts[iNdEx].MarshalToSizedBuffer(dAtA[:i])
-				if err != nil {
-					return 0, err
-				}
-				i -= size
-				i = encodeVarintMpc(dAtA, i, uint64(size))
+	if m.NewAccount != nil {
+		{
+			size, err := m.NewAccount.MarshalToSizedBuffer(dAtA[:i])
+			if err != nil {
+				return 0, err
 			}
-			i--
-			dAtA[i] = 0x22
+			i -= size
+			i = encodeVarintMpc(dAtA, i, uint64(size))
 		}
+		i--
+		dAtA[i] = 0x22
 	}
 	if m.DidDocument != nil {
 		{
@@ -1869,11 +1868,9 @@ func (m *CreateAccountResponse) Size() (n int) {
 		l = m.DidDocument.Size()
 		n += 1 + l + sovMpc(uint64(l))
 	}
-	if len(m.Accounts) > 0 {
-		for _, e := range m.Accounts {
-			l = e.Size()
-			n += 1 + l + sovMpc(uint64(l))
-		}
+	if m.NewAccount != nil {
+		l = m.NewAccount.Size()
+		n += 1 + l + sovMpc(uint64(l))
 	}
 	return n
 }
@@ -2614,7 +2611,7 @@ func (m *CreateAccountResponse) Unmarshal(dAtA []byte) error {
 			iNdEx = postIndex
 		case 4:
 			if wireType != 2 {
-				return fmt.Errorf("proto: wrong wireType = %d for field Accounts", wireType)
+				return fmt.Errorf("proto: wrong wireType = %d for field NewAccount", wireType)
 			}
 			var msglen int
 			for shift := uint(0); ; shift += 7 {
@@ -2641,8 +2638,10 @@ func (m *CreateAccountResponse) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			m.Accounts = append(m.Accounts, &Account{})
-			if err := m.Accounts[len(m.Accounts)-1].Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+			if m.NewAccount == nil {
+				m.NewAccount = &Account{}
+			}
+			if err := m.NewAccount.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
